--- a/src/panporter_pkg/config/panporter_control.yaml
+++ b/src/panporter_pkg/config/panporter_control.yaml
@@ -13,6 +13,6 @@ wheel_right_joint_velocity_controller:
   joint: wheel_right_joint
   pid: {p: 10.0, i: 0, d: 1.0}
 prism_joint_position_controller:
-  type: effort_controllers/JointPositionController
+  type: effort_controllers/JointVelocityController # JointPositionController
   joint: prism_joint
-  pid: {p: 5000.0, i: 0, d: 10.0}
+  pid: {p: 50000.0, i: 0, d: 0.0}
