repetitive and parametrizied scenario

--- a/src/panporter_pkg/CMakeLists.txt
+++ b/src/panporter_pkg/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(panporter_pkg)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS} -O3")
+# set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH} /usr/lib/x86_64-linux-gnu/")
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
@@ -19,12 +21,15 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 ## System dependencies are found with CMake's conventions
- find_package(PCL REQUIRED)
- include_directories(
+find_package(PCL REQUIRED)
+find_package(gazebo REQUIRED)
+
+include_directories(
   ${PCL_INCLUDE_DIRS}
 )
 link_directories(
   ${PCL_LIBRARY_DIRS}
+  ${GAZEBO_LIBRARY_DIRS}
 )
 
 ###################################
@@ -49,6 +54,7 @@ catkin_package(
 # include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
+  ${GAZEBO_INCLUDE_DIRS}
 )
 
 
@@ -57,6 +63,7 @@ include_directories(
 add_executable(teleop_joy src/teleop_joy.cpp)
 add_executable(odom src/odom.cpp)
 add_executable(my_motion src/my_motion.cpp src/pid.cpp)
+add_library(ContactPlugin SHARED src/ContactPlugin.cc)
 # add_executable(panporter_control src/panporter_control.cpp)
 
 ## Specify libraries to link a library or executable target against
@@ -65,7 +72,9 @@ target_link_libraries(teleop_joy
 target_link_libraries(odom
   ${catkin_LIBRARIES} )
 target_link_libraries(my_motion
-  ${catkin_LIBRARIES} )
+  ${catkin_LIBRARIES}
+  ${GAZEBO_LIBRARIES}
+)
 # target_link_libraries(panporter_control
 #   ${catkin_LIBRARIES} )
   
